--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
-        天外天迎新季
+        你的天大专属
     </title>
 </head>
 
 <body style="margin: 0;padding: 0;">
     <noscript>
-      <strong>We're sorry but 天外天迎新季 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 你的天大专属 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
