--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1, minimum-scale=1.0,user-scalable=no,viewport-fit=cover" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>
         你的天大专属
@@ -16,7 +16,6 @@
       <strong>We're sorry but 你的天大专属 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
 </body>
 
 </html>
